--- a/src/index.html
+++ b/src/index.html
@@ -9,201 +9,38 @@
 	<link rel="stylesheet" media="all" href="css/style.css" >
 	<script src="js/app.js"></script>
 </head>
+
+	<style>
+		.preview-list {
+			padding: 20px 0;
+		}
+		.preview-list a {
+			display: block;
+			height: 35px;
+			line-height: 35px;
+			padding: 0 20px;
+			font-size: 18px;
+		}
+	</style>
+
 <body>
-<!-- BEGIN  out-->
-<div class="out">
-	
+
 	//=include partials/nav-menu.html  
-
-	<div id='content' class="page-container">
+	
+	<!-- BEGIN  page-->
+	<div class="page">
 		//=include partials/header.html  
+		
+		<div class="page-container">
 
-		<div class="search">
-			<form action="" class="search__form">
-				<input type="text" class="search__input" placeholder="Поиск">
-				<button class="search__btn" type="submit">
-					<span class="icon-search_b"></span>
-				</button>
-			</form>
+			<ol class="preview-list">
+				<li><a href="./main.html">Главная страница</a></li>
+				<li><a href="./products-list.html">Все категории</a></li>
+				<li><a href="./products-list_slider.html">Все категории со слайдером</a></li>
+			</ol>
+
 		</div>
-
-		<div class="slider border-bold">
-			<ul class="slider__list js-slider">
-				<li class="slider__item">
-					<a href="" class="slider__link">
-						<img src="./img/slider/slide1.jpg" alt="">
-					</a>
-				</li>
-				<li class="slider__item">
-					<a href="" class="slider__link">
-						<img src="./img/slider/slide1.jpg" alt="">
-					</a>
-				</li>
-				<li class="slider__item">
-					<a href="" class="slider__link">
-						<img src="./img/slider/slide1.jpg" alt="">
-					</a>
-				</li>
-			</ul>
-		</div>
-
-		<div class="categories">
-			<ul class="categories__list">
-				<li class="categories__item">
-					<a href='' class="category">
-						<span class="category__img">
-							<span class="icon-all_products"></span>
-						</span>
-						<span class="category__title">Все товары</span>
-						<span class="category__arrow">
-							<span class="icon-arr_right"></span>
-						</span>
-					</a>
-					<div class="categories__content">
-						<div class="products-info">
-							<ul class="products-info__list">
-								<li class="products-info__item">
-									<a href="" class="products-info__link">
-										<table class="product-card">
-									        <tr>
-									            <td class="product-card__cell product-card__cell_center">
-									            	<img src="./img/product_cards/apple_black.jpg" class="product-card__img">
-									            </td>
-									            <td class="product-card__cell">
-									                <div style="display: none" class="product-card__status">
-									                    <div class="product-card__label product-card__label_orange">ХИТ!</div>
-									                </div>
-									                <h3 class="product-card__title">APPLE IPHONE 7 32GB MATT BLACK ОФ.</h2>
-									                <div class="product-card__props">4.7" | 32 ГБ | 12 Мп</div>
-									                <div class="product-card__prices">
-										                <div class="product-card__price-wrap">
-											                <div class="product-card__price">18 699 <div class="product-card__price-currency">грн.</div></div>
-										                </div>
-										                <div class="product-card__price-wrap">
-										                	<div class="product-card__price product-card__price_exchange">18 699 
-											                	<div class="product-card__price-currency">грн.</div>
-											                	<div class="product-card__price_subtext">смартс-обмен</div>
-										                	</div>
-										                </div>
-									                </div>
-									                <div class="product-card__payment">
-									                	<div class="product-card__payment-in">
-										                	<span class="icon-payment_parts"></span>
-										                	<span>Оплата частями</span>
-									                	</div>
-									                </div>
-									            </td>
-									        </tr>
-										</table>
-									</a>
-								</li>
-								<li class="products-info__item">
-									<a href="" class="products-info__link">
-										<table class="product-card">
-									        <tr>
-									            <td class="product-card__cell product-card__cell_center">
-									            	<img src="./img/product_cards/xiomi_redmi.jpg" class="product-card__img">
-									            </td>
-									            <td class="product-card__cell">
-									                <div style="display: none" class="product-card__status">
-									                    <div class="product-card__label product-card__label_orange">ХИТ!</div>
-									                </div>
-									                <h3 class="product-card__title">XIAOMI REDMI NOTE 4X 64GB BLACK</h2>
-									                <div class="product-card__props">5.5" | 64 ГБ | 13 Мп</div>
-									                <div class="product-card__prices">
-										                <div class="product-card__price-wrap">
-											                <div class="product-card__price">18 699 <div class="product-card__price-currency">грн.</div></div>
-										                </div>
-										                <div class="product-card__price-wrap">
-										                	<div class="product-card__price product-card__price_exchange">18 699 
-											                	<div class="product-card__price-currency">грн.</div>
-											                	<div class="product-card__price_subtext">смартс-обмен</div>
-										                	</div>
-										                </div>
-									                </div>
-									                <div class="product-card__payment">
-									                	<div class="product-card__payment-in">
-										                	<span class="icon-payment_parts"></span>
-										                	<span>Оплата частями</span>
-									                	</div>
-									                </div>
-									            </td>
-									        </tr>
-										</table>
-									</a>
-								</li>
-
-							</ul>
-						</div>
-					</div>
-				</li>
-				<li class="categories__item">
-					<a href='' class="category">
-						<span class="category__img">
-							<span class="icon-actions_box"></span>
-						</span>
-						<span class="category__title">Акции</span>
-						<span class="category__arrow">
-							<span class="icon-arr_right"></span>
-						</span>
-					</a>
-					<div class="categories__content"></div>
-				</li>
-				<li class="categories__item">
-					<a href='' class="category">
-						<span class="category__img">
-							<span class="icon-shop_gray"></span>
-						</span>
-						<span class="category__title">Магазины</span>
-						<span class="category__arrow">
-							<span class="icon-arr_right"></span>
-						</span>
-					</a>
-					<div class="categories__content"></div>
-				</li>
-				<li class="categories__item">
-					<a href='' class="category">
-						<span class="category__img">
-							<span class="icon-warranty"></span>
-						</span>
-						<span class="category__title">Гарантия</span>
-						<span class="category__arrow">
-							<span class="icon-arr_right"></span>
-						</span>
-					</a>
-					<div class="categories__content"></div>
-				</li>
-				<li class="categories__item">
-					<a href='' class="category">
-						<span class="category__img">
-							<span class="icon-delivery_gray"></span>
-						</span>
-						<span class="category__title">Доставка</span>
-						<span class="category__arrow">
-							<span class="icon-arr_right"></span>
-						</span>
-					</a>
-					<div class="categories__content"></div>
-				</li>
-				<li class="categories__item">
-					<a href='' class="category">
-						<span class="category__img">
-							<span class="icon-service_gray"></span>
-						</span>
-						<span class="category__title">Сервисный центр</span>
-						<span class="category__arrow">
-							<span class="icon-arr_right"></span>
-						</span>
-					</a>
-					<div class="categories__content"></div>
-				</li>
-			</ul>
-		</div>
-
-		//=include partials/footer.html  
-
 	</div>
-</div>
-<!-- END out-->
+	<!-- END page-->
 </body>
 </html>
