fix category item

--- a/src/main.html
+++ b/src/main.html
@@ -215,7 +215,7 @@
 								<div class="category__cell">
 									<div class="category__title">Сервисный центр</div>
 								</div>
-								<div class="category__cell div">
+								<div class="category__cell category__arrow">
 									<span class="icon-arr_right"></span>
 								</div>
 							</div>
