create registration pages

--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,8 @@
 				<li><a href="./main.html">Главная страница</a></li>
 				<li><a href="./products-list.html">Все категории</a></li>
 				<li><a href="./products-list_slider.html">Все категории со слайдером</a></li>
+				<li><a href="./registration_step1.html">Регистрация: ввод номера</a></li>
+				<li><a href="./registration_step2.html">Регистрация: ввод кода</a></li>
 			</ol>
 
 		</div>
