--- a/src/index.html
+++ b/src/index.html
@@ -25,22 +25,24 @@
 
 <body>
 
-	//=include partials/nav-menu.html  
-	
-	<!-- BEGIN  page-->
-	<div class="page">
-		//=include partials/header.html  
+	<div class="out js-main-out">
+		//=include partials/nav-menu.html  
 		
-		<div class="page-container">
+		<!-- BEGIN  page-->
+		<div class="page js-page">
+			//=include partials/header.html  
+			
+			<div class="page-container">
 
-			<ol class="preview-list">
-				<li><a href="./main.html">Главная страница</a></li>
-				<li><a href="./products-list.html">Все категории</a></li>
-				<li><a href="./products-list_slider.html">Все категории со слайдером</a></li>
-				<li><a href="./registration_step1.html">Регистрация: ввод номера</a></li>
-				<li><a href="./registration_step2.html">Регистрация: ввод кода</a></li>
-			</ol>
+				<ol class="preview-list">
+					<li><a href="./main.html">Главная страница</a></li>
+					<li><a href="./products-list.html">Все категории</a></li>
+					<li><a href="./products-list_slider.html">Все категории со слайдером</a></li>
+					<li><a href="./registration_step1.html">Регистрация: ввод номера</a></li>
+					<li><a href="./registration_step2.html">Регистрация: ввод кода</a></li>
+				</ol>
 
+			</div>
 		</div>
 	</div>
 	<!-- END page-->
