--- a/src/products-list.html
+++ b/src/products-list.html
@@ -7,25 +7,26 @@
 	<meta name="format-detection" content="telephone=no">
 	<meta name="theme-color" content="#fff">
 	<link rel="stylesheet" media="all" href="css/style.css" >
-	<script src="js/app.js"></script>
 </head>
 <body>
 
 	//=include partials/nav-menu.html  
 	
 	<!-- BEGIN  page-->
-	<div class="page" data-role="page">
+	<div class="page">
 		
-		<header class="header" data-position="fixed">
-			<a href="" class="header__link" data-role="none">
+		<!-- BEGIN header-->
+		<header class="header">
+			<a href="" class="header__link">
 				<span class="icon-arr_left"></span>
 				<span class="header__link-text">Главная</span>
 			</a>
 		</header>
-
+		<!-- END header-->
 		
-		<div class="page-container ui-content" >
+		<div class="page-content" >
 
+			<!-- BEGIN categories-->
 			<div class="categories">
 				<ul class="categories__list">
 					<li class="categories__item">
@@ -90,9 +91,12 @@
 					</li>
 				</ul>
 			</div>
+			<!-- END categories-->
 
 		</div>
 	</div>
 	<!-- END page-->
+	
+	<script src="js/app.js"></script>
 </body>
 </html>
