--- a/src/registration_step2.html
+++ b/src/registration_step2.html
@@ -2,30 +2,27 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Products-list</title>
+	<title>Registration</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="format-detection" content="telephone=no">
 	<meta name="theme-color" content="#fff">
 	<link rel="stylesheet" media="all" href="css/style.css" >
-	<script src="js/app.js"></script>
 </head>
 <body>
 
 	//=include partials/nav-menu.html  
 	
 	<!-- BEGIN  page-->
-	<div class="page" data-role="page">
-
+	<div class="page">
 
 		//=include partials/header.html  
-		<div class="page-container ui-content" >
+		<div class="page-content" >
 
 			<div class="registration">
 
 				<div class="logo logo_club">
 					<img src="img/logo.svg" alt="">
 				</div>
-				
 
 				<h2 class="title-h2 title-h2_dark_gray title-h2_mb_mid">Введите код </h2>
 
@@ -55,5 +52,6 @@
 
 	</div>
 	<!-- END page-->
+	<script src="js/app.js"></script>
 </body>
 </html>
