create registration pages

--- a/src/registration_step2.html
+++ b/src/registration_step2.html
@@ -20,7 +20,7 @@
 
 			<div class="registration">
 
-				<div class="logo logo_club">
+				<div class="registration__img logo logo_club">
 					<img src="img/logo.svg" alt="">
 				</div>
 
