added delivery page

--- a/src/index.html
+++ b/src/index.html
@@ -46,6 +46,7 @@
 					<li><a href="./login.html">Авторизация</a></li>
 					<li><a href="./service_center.html">Сервисный центр</a></li>
 					<li><a href="./warranty.html">Гарантия</a></li>
+					<li><a href="./delivery.html">Доставка</a></li>
 				</ol>
 
 			</div>
