some fixes of image's path and styles of static pages

--- a/src/smarts_exchange.html
+++ b/src/smarts_exchange.html
@@ -20,9 +20,9 @@
 		<div class="page-content" >
 
 			<!-- BEGIN warranty-->
-			<div class="warranty  static-page">
-				<div class="banner">
-					<img src="/img/banners/smarts_exchange.jpg" alt="">
+			<div class="warranty static-page">
+				<div class="banner banner_top">
+					<img src="img/banners/smarts_exchange.jpg" alt="">
 				</div>
 				<h2 class="title-h2 title-h2_grey title-h2_mb_mid">Смартс-обмен</h2>
 
