--- a/src/index.html
+++ b/src/index.html
@@ -49,6 +49,7 @@
 					<li><a href="./delivery.html">Доставка</a></li>
 					<li><a href="./smarts_exchange.html">Смартс-обмен</a></li>
 					<li><a href="./smarts_credit.html">Рассрочка в Смартс</a></li>
+					<li><a href="./smarts_portion.html">Сервис “Оплата частями”</a></li>
 				</ol>
 
 			</div>
