--- a/src/index.html
+++ b/src/index.html
@@ -50,6 +50,7 @@
 					<li><a href="./smarts_exchange.html">Смартс-обмен</a></li>
 					<li><a href="./smarts_credit.html">Рассрочка в Смартс</a></li>
 					<li><a href="./smarts_portion.html">Сервис “Оплата частями”</a></li>
+					<li><a href="./stores.html">Магазины</a></li>
 				</ol>
 
 			</div>
