upd order pages

--- a/src/index.html
+++ b/src/index.html
@@ -48,6 +48,8 @@
 					<li><a href="./warranty.html">Гарантия</a></li>
 					<li><a href="./delivery.html">Доставка</a></li>
 					<li><a href="./smarts_exchange.html">Смартс-обмен</a></li>
+					<li><a href="./cart.html">Корзина</a></li>
+					<li><a href="./ordering.html">Оформление заказа</a></li>
 				</ol>
 
 			</div>
