--- a/src/registration_step2.html
+++ b/src/registration_step2.html
@@ -31,7 +31,7 @@
 				<div class="form">
 					<form action="">
 						<div class="form-field">
-							<input class="form-input" type="text" value="" autofocus="autofocus">
+							<input class="form-input form-input_pad" type="text" value="" autofocus="autofocus">
 							<button class="button-arrow">
 								<i class="icon-arr_right_w"></i>
 							</button>
