--- a/src/registration_step1.html
+++ b/src/registration_step1.html
@@ -34,7 +34,7 @@
 					<form action="">
 						<div class="form-field">
 							<label class="form-label" for="tel_number">Введите Ваш номер телефона</label>
-							<input class="form-input" id="tel_number" type="text" value="" autofocus="autofocus">
+							<input class="form-input form-input_pad" id="tel_number" type="text" value="" autofocus="autofocus">
 							<button class="button-arrow">
 								<i class="icon-arr_right_w"></i>
 							</button>
