product-page creating

--- a/src/main.html
+++ b/src/main.html
@@ -34,23 +34,23 @@
 
 			<!-- BEGIN slider-->
 			<div class="slider border-bold">
-				<ul class="slider__list js-slider">
-					<li class="slider__item">
+				<div class="slider__list js-slider">
+					<div class="slider__item">
 						<a href="" class="slider__link">
 							<img src="./img/slider/slide1.jpg" alt="">
 						</a>
-					</li>
-					<li class="slider__item">
+					</div>
+					<div class="slider__item">
 						<a href="" class="slider__link">
 							<img src="./img/slider/slide1.jpg" alt="">
 						</a>
-					</li>
-					<li class="slider__item">
+					</div>
+					<div class="slider__item">
 						<a href="" class="slider__link">
 							<img src="./img/slider/slide1.jpg" alt="">
 						</a>
-					</li>
-				</ul>
+					</div>
+				</div>
 			</div>
 			<!-- END slider-->
 
