--- a/src/product-card.html
+++ b/src/product-card.html
@@ -21,39 +21,85 @@
 
 		<div class="page-content">
 
+			<div class="product">
+				<div class="product__inner">
+					<div class="product__header">
+						<h1 class="product__title title-h1">APPLE IPHONE 7 32GB MATT BLACK ОФ. ГАРАНТИЯ</h1>
+						<div class="product__subtitle">Код товара: 92437</div>
+					</div>
 
-			<!-- BEGIN slider-->
-			<div class="slider border-bold">
-				<div class="slider__list js-slider">
-					<div class="slider__item">
-						<a href="" class="slider__link">
-							<img src="./img/slider/slide1.jpg" alt="">
+					<div class="product__slider">
+						<div class="product__btn slide-arrow slide-arrow_left">
+							<i class="icon-arr_right"></i>
+						</div>
+						<div class="product__btn slide-arrow slide-arrow_right">
+							<i class="icon-arr_right"></i>
+						</div>
+
+						<a href="" class="product__pay-plan">
+							<img src="img/rassrochka.png" alt="">
 						</a>
-					</div>
-					<div class="slider__item">
-						<a href="" class="slider__link">
-							<img src="./img/slider/slide1.jpg" alt="">
-						</a>
-					</div>
-					<div class="slider__item">
-						<a href="" class="slider__link">
-							<img src="./img/slider/slide1.jpg" alt="">
-						</a>
+
+						<!-- BEGIN item-slider-->
+						<div class="item-slider js-prod-slider">
+							<div class="item-slide">
+								<div class="item-slide__inner">
+									<img src="./img/slider/prod-image.png" alt="">
+								</div>
+							</div>
+							<div class="item-slide">
+								<div class="item-slide__inner">
+									<img src="./img/slider/prod-image.png" alt="">
+								</div>
+							</div>
+							<div class="item-slide">
+								<div class="item-slide__inner">
+									<img src="./img/slider/prod-image.png" alt="">
+								</div>
+							</div>
+						</div>
+						<!-- END item-slider-->
+
+						<div class="product-features">
+							<div class="product-features__title">Выберите цвет:</div>
+							<ul class="product-features__list product-color">
+								<li class="product-features__item">
+									<a href="" class="product-features__link"></a>
+								</li>
+								<li class="product-features__item">
+									<a href="" class="product-features__link"></a>
+								</li>
+								<li class="product-features__item">
+									<a href="" class="product-features__link"></a>
+								</li>
+								<li class="product-features__item">
+									<a href="" class="product-features__link"></a>
+								</li>
+								<li class="product-features__item">
+									<a href="" class="product-features__link"></a>
+								</li>
+								
+							</ul>
+						</div>
 					</div>
 				</div>
 			</div>
-			<!-- END slider-->
-
 			<!-- BEGIN tabs-->
 			<div class="tabs ">
 				<ul class="tabs__list">
 					<li class="tabs__item">
-						<a href="" class="tabs__link js-tab-link">Акции к этому товару</a>
+						<a href="" class="tabs__link js-tab-link">Акции к этому товару
+							<span class="tabs__arrow icon-arr_right"></span>
+						</a>
 						<div class="tabs__content js-tab-content">
 							<div class="product-actions">
 								<div class="product-actions__bg" style="background-image: url(img/actions_bg.png);">
-									<div class="product-actions__logo"><img src="img/logo_sm.svg" alt="" class="logo__img"></div>
-									<div class="product-actions__text">возвращаем на бонус <span class="product-actions__amount">1500 </span>грн.</div>
+									<div class="product-actions__logo"><img src="img/logo.svg" alt="" class="logo__img"></div>
+									<div class="product-actions__caption">возвращаем на бонус 
+										<span class="product-actions__text-block">
+											<span class="product-actions__amount">1500 </span>грн.
+										</span>
+									</div>
 								</div>
 								<div class="product-actions__content">
 									Сертификат в рестораны сети Гурмания на 500 грн. в подарок к этому смартфону!
@@ -63,9 +109,7 @@
 					</li>
 					<li class="tabs__item">
 						<a href="" class="tabs__link js-tab-link">Характеристики
-							<span class="tabs__arrow">
-								<span class="icon-arr_right"></span>
-							</span>
+							<span class="tabs__arrow icon-arr_right"></span>
 						</a>
 						<div class="tabs__content js-tab-content">
 
@@ -73,9 +117,7 @@
 					</li>
 					<li class="tabs__item">
 						<a href="" class="tabs__link js-tab-link">Описание
-							<span class="tabs__arrow">
-								<span class="icon-arr_right"></span>
-							</span>
+							<span class="tabs__arrow icon-arr_right"></span>
 						</a>
 						<div class="tabs__content js-tab-content">
 
@@ -83,9 +125,7 @@
 					</li>
 					<li class="tabs__item">
 						<a href="" class="tabs__link js-tab-link">Отзывы 5
-							<span class="tabs__arrow">
-								<span class="icon-arr_right"></span>
-							</span>
+							<span class="tabs__arrow icon-arr_right"></span>
 						</a>
 						<div class="tabs__content js-tab-content">
 
@@ -93,9 +133,7 @@
 					</li>
 					<li class="tabs__item">
 						<a href="" class="tabs__link js-tab-link">Аксессуары
-							<span class="tabs__arrow">
-								<span class="icon-arr_right"></span>
-							</span>
+							<span class="tabs__arrow icon-arr_right"></span>
 						</a>
 						<div class="tabs__content js-tab-content">
 
@@ -103,9 +141,7 @@
 					</li>
 					<li class="tabs__item">
 						<a href="" class="tabs__link js-tab-link">Ранее просматривали
-							<span class="tabs__arrow">
-								<span class="icon-arr_right"></span>
-							</span>
+							<span class="tabs__arrow icon-arr_right"></span>
 						</a>
 						<div class="tabs__content js-tab-content">
 
@@ -120,98 +156,6 @@
 			<!-- BEGIN categories-->
 			<div class="categories">
 				<ul class="categories__list">
-					<li class="categories__item">
-						<a href='' class="category">
-							<div class="category__row">
-								<div class="category__cell category__img">
-									<span class="icon-all_products"></span>
-								</div>
-								<div class="category__cell">
-									<div class="category__title">Все товары</div>
-								</div>
-								<div class="category__cell category__arrow">
-									<span class="icon-arr_right"></span>
-								</div>
-							</div>
-						</a>
-						<div class="categories__content">
-							<div class="products-info">
-								<ul class="products-info__list">
-									<li class="products-info__item">
-										<a href="" class="products-info__link">
-											<table class="product-card">
-										        <tr>
-										            <td class="product-card__cell product-card__cell_center">
-										            	<img src="./img/product_cards/apple_black.jpg" class="product-card__img">
-										            </td>
-										            <td class="product-card__cell">
-										                <div style="display: none" class="product-card__status">
-										                    <div class="product-card__label product-card__label_orange">ХИТ!</div>
-										                </div>
-										                <h3 class="product-card__title">APPLE IPHONE 7 32GB MATT BLACK ОФ.</h2>
-										                <div class="product-card__props">4.7" | 32 ГБ | 12 Мп</div>
-										                <div class="product-card__prices">
-											                <div class="product-card__price-wrap">
-												                <div class="product-card__price">18 699 <div class="product-card__price-currency">грн.</div></div>
-											                </div>
-											                <div class="product-card__price-wrap">
-											                	<div class="product-card__price product-card__price_exchange">18 699 
-												                	<div class="product-card__price-currency">грн.</div>
-												                	<div class="product-card__price_subtext">смартс-обмен</div>
-											                	</div>
-											                </div>
-										                </div>
-										                <div class="product-card__payment">
-										                	<div class="product-card__payment-in">
-											                	<span class="icon-payment_parts"></span>
-											                	<span>Оплата частями</span>
-										                	</div>
-										                </div>
-										            </td>
-										        </tr>
-											</table>
-										</a>
-									</li>
-									<li class="products-info__item">
-										<a href="" class="products-info__link">
-											<table class="product-card">
-										        <tr>
-										            <td class="product-card__cell product-card__cell_center">
-										            	<img src="./img/product_cards/xiomi_redmi.jpg" class="product-card__img">
-										            </td>
-										            <td class="product-card__cell">
-										                <div style="display: none" class="product-card__status">
-										                    <div class="product-card__label product-card__label_orange">ХИТ!</div>
-										                </div>
-										                <h3 class="product-card__title">XIAOMI REDMI NOTE 4X 64GB BLACK</h2>
-										                <div class="product-card__props">5.5" | 64 ГБ | 13 Мп</div>
-										                <div class="product-card__prices">
-											                <div class="product-card__price-wrap">
-												                <div class="product-card__price">18 699 <div class="product-card__price-currency">грн.</div></div>
-											                </div>
-											                <div class="product-card__price-wrap">
-											                	<div class="product-card__price product-card__price_exchange">18 699 
-												                	<div class="product-card__price-currency">грн.</div>
-												                	<div class="product-card__price_subtext">смартс-обмен</div>
-											                	</div>
-											                </div>
-										                </div>
-										                <div class="product-card__payment">
-										                	<div class="product-card__payment-in">
-											                	<span class="icon-payment_parts"></span>
-											                	<span>Оплата частями</span>
-										                	</div>
-										                </div>
-										            </td>
-										        </tr>
-											</table>
-										</a>
-									</li>
-
-								</ul>
-							</div>
-						</div>
-					</li>
 					<li class="categories__item">
 						<a href='' class="category">
 							<div class="category__row">
