--- a/src/product-card.html
+++ b/src/product-card.html
@@ -302,12 +302,11 @@
 										</div>
 
 										<div class="form-field form-field_mb_sm">
-											<textarea class="form-textarea" name="user_comment" wrap="soft" placeholder="Что скажете?" rows="5" cols="5">													
-											</textarea>
+											<textarea class="form-textarea" name="new_comment" wrap="soft" placeholder="Что скажете?" rows="5" cols="5"></textarea>
 										</div>
 
 										<div class="form-field form-field_mb_sm">
-											<button type="submit" class="btn-primary"><span>Отправить</span></button>
+											<button type="submit" class="btn-primary btn-primary_sm"><span>Отправить</span></button>
 										</div>
 									</form>
 								</div>
@@ -323,12 +322,83 @@
 
 						</div>
 					</li>
-					<li class="tabs__item js-tab-item">
-						<a href="" class="tabs__link js-tab-link">Ранее просматривали
-							<span class="tabs__arrow icon-arr_right"></span>
-						</a>
-						<div class="tabs__content js-tab-content">
-
+					<li class="tabs__item is-static is-active">
+						<a href="" class="tabs__link tabs__link_white">Ранее просматривали</a>
+						<div class="tabs__content">
+							<div class="products-info">
+								<ul class="products-info__list">
+									<li class="products-info__item">
+										<a href="" class="products-info__link">
+											<table class="product-card">
+										        <tr>
+										            <td class="product-card__cell product-card__cell_center">
+										            	<img src="./img/product_cards/apple_black.jpg" class="product-card__img">
+										            </td>
+										            <td class="product-card__cell">
+										                <div style="display: none" class="product-card__status">
+										                    <div class="product-card__label product-card__label_orange">ХИТ!</div>
+										                </div>
+										                <h3 class="product-card__title">APPLE IPHONE 7 32GB MATT BLACK ОФ.</h2>
+										                <div class="product-card__props">4.7" | 32 ГБ | 12 Мп</div>
+										                <div class="product-card__prices">
+											                <div class="product-card__price-wrap">
+												                <div class="product-card__price">18 699 <div class="product-card__price-currency">грн.</div></div>
+											                </div>
+											                <div class="product-card__price-wrap">
+											                	<div class="product-card__price product-card__price_exchange">18 699 
+												                	<div class="product-card__price-currency">грн.</div>
+												                	<div class="product-card__price_subtext">смартс-обмен</div>
+											                	</div>
+											                </div>
+										                </div>
+										                <div class="product-card__payment">
+										                	<div class="product-card__payment-in">
+											                	<span class="icon-payment_parts"></span>
+											                	<span>Оплата частями</span>
+										                	</div>
+										                </div>
+										            </td>
+										        </tr>
+											</table>
+										</a>
+									</li>
+									<li class="products-info__item">
+										<a href="" class="products-info__link">
+											<table class="product-card">
+										        <tr>
+										            <td class="product-card__cell product-card__cell_center">
+										            	<img src="./img/product_cards/xiomi_redmi.jpg" class="product-card__img">
+										            </td>
+										            <td class="product-card__cell">
+										                <div style="display: none" class="product-card__status">
+										                    <div class="product-card__label product-card__label_orange">ХИТ!</div>
+										                </div>
+										                <h3 class="product-card__title">XIAOMI REDMI NOTE 4X 64GB BLACK</h2>
+										                <div class="product-card__props">5.5" | 64 ГБ | 13 Мп</div>
+										                <div class="product-card__prices">
+											                <div class="product-card__price-wrap">
+												                <div class="product-card__price">18 699 <div class="product-card__price-currency">грн.</div></div>
+											                </div>
+											                <div class="product-card__price-wrap">
+											                	<div class="product-card__price product-card__price_exchange">18 699 
+												                	<div class="product-card__price-currency">грн.</div>
+												                	<div class="product-card__price_subtext">смартс-обмен</div>
+											                	</div>
+											                </div>
+										                </div>
+										                <div class="product-card__payment">
+										                	<div class="product-card__payment-in">
+											                	<span class="icon-payment_parts"></span>
+											                	<span>Оплата частями</span>
+										                	</div>
+										                </div>
+										            </td>
+										        </tr>
+											</table>
+										</a>
+									</li>
+								</ul>
+							</div>
 						</div>
 					</li>
 
