--- a/src/product-card.html
+++ b/src/product-card.html
@@ -24,8 +24,8 @@
 			<div class="product">
 				<div class="product__inner">
 					<div class="product__header">
-						<h1 class="product__title title-h1">APPLE IPHONE 7 32GB MATT BLACK ОФ. ГАРАНТИЯ</h1>
-						<div class="product__subtitle">Код товара: 92437</div>
+						<h1 class="product-title title-h1">APPLE IPHONE 7 32GB MATT BLACK ОФ. ГАРАНТИЯ</h1>
+						<div class="product-code">Код товара: 92437</div>
 					</div>
 
 					<div class="product__slider">
