--- a/src/ordering.html
+++ b/src/ordering.html
@@ -39,7 +39,59 @@
 					</div>
 
 				<div class="order-list">
-					<div class="order-list__title">Состав заказа <i class="icon-arr_right"></i></div>
+					<div class="tabs tabs_out">
+						<ul class="tabs__list">
+							<li class="tabs__item">
+								<a href="" class="tabs__link js-tab-link">Состав заказа <span class="tabs__arrow icon-arr_right"></span></a>
+								<div class="tabs__content order-list__details js-tab-content">
+									<a href="" class="order-list__edit">Изменить заказ</a>
+	
+									<div class="order-list__info">
+										<div class="order-list__info-row">
+											<div class="order-list__info-cell">
+												<img src="img/product_cards/xiomi_redmi.jpg" alt="">
+											</div>
+											<div class="order-list__info-cell">
+												<div class="order-list__info-product product-title">M5c black Meizu</div>
+												<div class="order-list__info-code product-code">Код товара 612805</div>
+											</div>
+										</div>
+									</div>
+									<div class="order-list__costs">
+
+											<div class="order-list__costs-sections">
+												<div class="order-list__costs-title">Цена</div>
+												<div class="order-list__costs-value">
+													2 888 <span class="order-list__costs-currency">грн.</span>
+												</div>
+											</div>
+											<div class="order-list__costs-sections">
+												<div class="order-list__costs-title">Возвращаем</div>
+												<div class="order-list__costs-value">
+													888 <span class="order-list__costs-currency">грн.</span>
+												</div>
+											</div>
+											<div class="order-list__costs-sections">
+												<div class="order-list__costs-title">Количество</div>
+											    <div class="counter js-counter">
+											        <button class="counter__btn" type="button" data-increment="-1">-</button>
+											        <div class="counter__output class="counter__btn""><span class="counter-output"></span></div>
+											        <button class="counter__btn" type="button" data-increment="1">+</button>
+											    </div>
+											</div>
+											<div class="order-list__costs-sections">
+												<div class="order-list__costs-title">Сумма</div>
+												<div class="order-list__costs-value">
+													<span class="order-list__costs-amount">2 888 
+														<span class="order-list__costs-currency">грн.</span>
+													</span>
+												</div>
+											</div>
+									</div>
+								</div>
+							</li>
+						</ul>
+					</div>
 					
 					<div class="order-list__section">
 						<div class="title-h2">Ваши данные</div>
@@ -338,6 +390,11 @@
         <a class="popup__close" data-popup-close="popup-3" href="#">x</a>
     </div>
 </div>
+	
+<!-- BEGIN BUTTON TO UP -->
+<button class="scroll-top js-scroll-top" type="button"><span class="icon-btn_up"></span></button>
+<!-- END BUTTON TO UP -->
+
 
 	<script src="js/app.js"></script>
 </body>
