upd btn to top, popups for service center

--- a/src/index.html
+++ b/src/index.html
@@ -62,5 +62,11 @@
 		</div>
 	</div>
 	<!-- END page-->
+
+
+	<!-- BEGIN BUTTON TO UP -->
+	<button class="scroll-top js-scroll-top" type="button"><span class="icon-btn_up"></span></button>
+	<!-- END BUTTON TO UP -->
+
 </body>
 </html>
