--- a/src/products-list_slider.html
+++ b/src/products-list_slider.html
@@ -118,7 +118,11 @@
 		</div>
 	</div>
 	<!-- END page-->
-	
+
+	<!-- BEGIN BUTTON TO UP -->
+	<button class="scroll-top js-scroll-top" type="button"><span class="icon-btn_up"></span></button>
+	<!-- END BUTTON TO UP -->
+
 	<script src="js/app.js"></script>
 </body>
 </html>
